Split MyObject into EnemyObject and PlayerObject. These are rendered using VBO and shaders. PlayerObject now renders Minecraft Steve avatar head. EnemyObject now renders Minecraft creeper head. Cleaned up some code.

--- a/ass2/spec/.gitignore
+++ b/ass2/spec/.gitignore
@@ -13,3 +13,7 @@
 /RainParticle.class
 /CuboidObject.class
 /PortalPair.class
+/HeadObject.class
+/EnemyObject.class
+/PlayerObject.class
+/MobObject.class
